Refactor module hierarchy and folder/class names.
